--- a/packages/Keyguard/res/values/slim_strings.xml
+++ b/packages/Keyguard/res/values/slim_strings.xml
@@ -21,5 +21,22 @@
 
     <!-- Description of the Random button in a KeyboardView. [CHAR LIMIT=NONE] -->
     <string name="keyboardview_keycode_random">Reload random buttons</string>
+    
+    <!-- Accessibility description of the gesture unlock. [CHAR_LIMIT=none] -->
+    <string name="keyguard_accessibility_gesture_unlock">Gesture unlock.</string>
+    <!-- Accessibility description of the unlock gesture area. [CHAR_LIMIT=none] -->
+    <string name="keyguard_accessibility_gesture_area">Gesture area.</string>
+    
+    <!-- Instructions for using the gesture unlock screen -->
+    <string name="kg_gesture_instructions">Draw your gesture</string>
+    <!-- Message shown when user enters wrong pattern -->
+    <string name="kg_wrong_gesture">Wrong Gesture</string>
+    <!-- Message shown in gesture unlock after some number of unsuccessful attempts -->
+    <string name="kg_forgot_gesture_button_text">Forgot Gesture</string>
+    <!-- Countdown message shown after too many failed unlock attempts -->
+    <string name="kg_too_many_failed_gesture_attempts_dialog_message">
+        You have incorrectly drawn your unlock gesture <xliff:g id="number">%d</xliff:g> times.
+        \n\nTry again in <xliff:g id="number">%d</xliff:g> seconds.
+    </string>
 
 </resources>
